Add functionnality upload and product in plot (#27)
* add upload file image for product with management of unlink old version of file on edit or delete product (#25)

* Feature/crud product in plot (#26)

* add map interaction in back-office

* resolve form dynamic

* modify plot table by including all coordinates

---------
