# app/swagger/services/swagger.yaml
@@ -52,20 +52,18 @@ components:
         image:
           type: string
           example: 'tomates.png'
-        feature:
+        description:
           type: string
           example: Lorem ipsum
-        trick:
+        tip:
           type: string
           example: Loremp ipsum
         harvestBeginAt:
-          type: string
-          format: date
-          example: 2023-01-01
+          type: int
+          example: 1
         harvestEndAt:
-          type: string
-          format: date
-          example: 2023-02-01
+          type: int
+          example: 12
         category:
           $ref: '#/components/schemas/Category'
         variety:
@@ -92,13 +90,11 @@ components:
           type: string
           example: Jonagored
         harvestBeginAt:
-          type: string
-          format: date
-          example: 2023-01-01
+          type: int
+          example: 1
         harvestEndAt:
-          type: string
-          format: date
-          example: 2023-02-01
+          type: int
+          example: 12
 
 paths:
   /api/categories:
